--- a/src/Honlsoft.TimeLog.Console/2021-12-29-sample.md
+++ b/src/Honlsoft.TimeLog.Console/2021-12-29-sample.md
@@ -1,10 +1,17 @@
 ﻿
 
-| Time            | Task | Description   |
-|-----------------|--|---------------|
-| 8:00AM-9:00AM   | 12345 | description   |
-| 9:00AM-10:00AM  | 52341 | description 2 |
-| 10:00AM-11:00AM | 52341 | description 3 |
-| 11:00AM-12:00PM | 52341 | description 3 |
-| 11:00AM-12:00PM | 12345 | description 4 |
-| 11:00AM-12:00PM | 99999 | unidentified |
+| Time          | Task            | Description                                   |
+|---------------|-----------------|-----------------------------------------------|
+| 8:00AM        | e-mails         | Check up and answer e-mails for the day       |
+| 8:15AM        | work item 123   | Worked on fixing production issue on form XYZ |
+| 9:15AM        | team ceremonies | Daily stand up                                |
+| 9:30AM        | work item 123   | Unit test production issue                    |
+| 12:00PM       | lunch           | Eat lunch                                     |
+| 1:00PM        | lead meeting    | Meeting with leads on the team.              |
+| 1:30PM        | work item 123   | complete fix, and check in                    |
+| 3:00PM        | infra meeting   | meeting with IT infrastructure team on project|
+| 3:30PM        | help co-worker  | Help co-worker on task                        |
+| 4:45PM-5:00PM | time tracking   | Time logging                                  |
+| 8:00PM-9:00PM | work item 321   | Fix bug found in testing                      |
+
+
